--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/qs": "^6.9.14",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
