--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@types/qs": "^6.9.14",
+    "@types/react-select": "^5.0.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
@@ -23,7 +24,8 @@
     "react-hook-form": "^7.51.2",
     "react-masonry-css": "^1.0.16",
     "react-responsive-masonry": "^2.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
