--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "qs": "^6.12.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-masonry-css": "^1.0.16",
