--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-masonry-css": "^1.0.16",
+    "react-paginate": "^8.2.0",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0"
