--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-paginate": "^8.2.0",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
