--- a/API/pom.xml
+++ b/API/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.6.7</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.devsuperior</groupId>
-	<artifactId>dscatalog</artifactId>
+	<groupId>com.portfolio</groupId>
+	<artifactId>InkIspireApi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dscatalog</name>
-	<description>DSCatalog Bootcamp DevSuperior</description>
+	<name>InkIspireApi</name>
+	<description>Api do sistema InkIspire</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -65,6 +65,11 @@
 			<groupId>org.springframework.security.oauth.boot</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
 		</dependency>
+		<!--<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>-->
 	</dependencies>
 
 	<build>
