--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,17 +1,22 @@
-spring.application.name=inkIspire
+
+# spring.datasource.url=jdbc:h2:mem:testdb
+# # # spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+
+#spring.profiles.active=${APP_PROFILE:test}
+
+#spring.jpa.open-in-view=false
+
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-
-spring.profiles.active=${APP_PROFILE:test}
-
-spring.jpa.open-in-view=false
+spring.datasource.username=user
+spring.datasource.password=123456
 
 security.oauth2.client.client-id=${CLIENT_ID:inkispire}
 security.oauth2.client.client-secret=${CLIENT_SECRET:inkispire123}
 
 jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
-jwt.duration=${JWT_DURATION:86400}
+jwt.duration=${JWT_DURATION:86400}        
