--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,16 +24,20 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-masonry-css": "^1.0.16",
+    "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
-    "react-toastify": "^10.0.5"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
