--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,9 @@
     "react": "^18.2.0",
     "react-currency-input-field": "^3.8.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.53.0",
     "react-masonry-css": "^1.0.16",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-responsive-masonry": "^2.2.0",
@@ -37,6 +38,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
